fix readme test badge

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,9 @@
 name: Test
 on:
     push:
-        branches-ignore:
+        branches:
             - master
+    pull_request:
 
 jobs:
     test:
